--- a/index.html
+++ b/index.html
@@ -10,12 +10,12 @@
     <!-- bootstarp -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
-    <link rel="stylesheet" href="/css/style.css">
-    <link rel="stylesheet" href="/css/responsive.css">
+    <link rel="stylesheet" href="/style.css">
+    <link rel="stylesheet" href="/responsive.css">
     <!-- ______________________________________________________________________ -->
 
     <!-- favicon----------- -->
-    <link rel="shortcut icon" href="/img/favicon.ico?v=2" type="image/x-icon">
+    <link rel="shortcut icon" href="/favicon.ico?v=2" type="image/x-icon">
     <!-- ______________________________________________________________________ -->
 
     <title>CSS My Site | Home</title>
@@ -39,18 +39,18 @@
     <!-- ---------------------TOP CONTAINER----------------- -->
     <!-- --------------------------------- -->
     <section class="topContainer">
-        <img src="img/cloud.svg" alt="" class="topContainerTopCloud">
+        <img src="/cloud.svg" alt="" class="topContainerTopCloud">
         <h2>I'm Jhia</h2>
         <p>a graphics desinger</p>
-        <img src="img/cloud.svg" alt="" class="topContainerButtomCloud">
-        <img src="img/land.svg" alt="" class="topContainerBackground">
+        <img src="/cloud.svg" alt="" class="topContainerButtomCloud">
+        <img src="/land.svg" alt="" class="topContainerBackground">
     </section>
 
     <!-- ---------------------MIDDLE CONTAINER----------------- -->
     <section class="middleContainer">
         <div class="container">
             <div class="profile">
-                <img class="profilePicture" src="/img/me.svg" alt="">
+                <img class="profilePicture" src="/me.svg" alt="">
                 <h2>Hi.</h2>
                 <p>I'm a web designer / developer based in Toronto, Canada. I have a passion for web design and love to
                     create for web and mobile devices.</p>
@@ -59,7 +59,7 @@
             <div class="skill">
                 <div class="skillRow">
                     <div class="skillPicture">
-                        <img src="img/me-dev.svg" alt="">
+                        <img src="/me-dev.svg" alt="">
                     </div>
                     <div class="skillText">
                         <h2>Design what you want.</h2>
@@ -70,7 +70,7 @@
                 </div>
                 <div class="skillRow">
                     <div class="skillPicture">
-                        <img src="img/working.png" alt="">
+                        <img src="/working.png" alt="">
                     </div>
                     <div class="skillText">
                         <h2>Develop what you need.</h2>
