--- a/index.html
+++ b/index.html
@@ -10,12 +10,12 @@
     <!-- bootstarp -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
-    <link rel="stylesheet" href="/style.css">
-    <link rel="stylesheet" href="/responsive.css">
+    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="responsive.css">
     <!-- ______________________________________________________________________ -->
 
     <!-- favicon----------- -->
-    <link rel="shortcut icon" href="/favicon.ico?v=2" type="image/x-icon">
+    <link rel="shortcut icon" href="favicon.ico?v=2" type="image/x-icon">
     <!-- ______________________________________________________________________ -->
 
     <title>CSS My Site | Home</title>
@@ -23,7 +23,7 @@
 
 <body>
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-        <a class="navbar-brand" href="/index.html">Jhia</a>
+        <a class="navbar-brand" href="index.html">Jhia</a>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent"
             aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
@@ -50,7 +50,7 @@
     <section class="middleContainer">
         <div class="container">
             <div class="profile">
-                <img class="profilePicture" src="/me.svg" alt="">
+                <img class="profilePicture" src="me.svg" alt="">
                 <h2>Hi.</h2>
                 <p>I'm a web designer / developer based in Toronto, Canada. I have a passion for web design and love to
                     create for web and mobile devices.</p>
@@ -59,7 +59,7 @@
             <div class="skill">
                 <div class="skillRow">
                     <div class="skillPicture">
-                        <img src="/me-dev.svg" alt="">
+                        <img src="me-dev.svg" alt="">
                     </div>
                     <div class="skillText">
                         <h2>Design what you want.</h2>
@@ -70,7 +70,7 @@
                 </div>
                 <div class="skillRow">
                     <div class="skillPicture">
-                        <img src="/working.png" alt="">
+                        <img src="working.png" alt="">
                     </div>
                     <div class="skillText">
                         <h2>Develop what you need.</h2>
