--- a/index.html
+++ b/index.html
@@ -32,18 +32,18 @@
             <ul class="navbar-nav ">
                 <li class="nav-item"><a class="nav-link" href="#">Home</a></li>
                 <li class="nav-item"><a class="nav-link" href="#">About</a></li>
-                <li class="nav-item"><a class="nav-link" href="/contact.html">Contact</a></li>
+                <li class="nav-item"><a class="nav-link" href="contact.html">Contact</a></li>
             </ul>
         </div>
     </nav>
     <!-- ---------------------TOP CONTAINER----------------- -->
     <!-- --------------------------------- -->
     <section class="topContainer">
-        <img src="/cloud.svg" alt="" class="topContainerTopCloud">
+        <img src="cloud.svg" alt="" class="topContainerTopCloud">
         <h2>I'm Jhia</h2>
         <p>a graphics desinger</p>
-        <img src="/cloud.svg" alt="" class="topContainerButtomCloud">
-        <img src="/land.svg" alt="" class="topContainerBackground">
+        <img src="cloud.svg" alt="" class="topContainerButtomCloud">
+        <img src="land.svg" alt="" class="topContainerBackground">
     </section>
 
     <!-- ---------------------MIDDLE CONTAINER----------------- -->
