--- a/index.html
+++ b/index.html
@@ -22,20 +22,21 @@
 </head>
 
 <body>
-    <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-        <a class="navbar-brand" href="index.html">Jhia</a>
-        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent"
-            aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+   <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+      <div class="container-fluid">
+            <a class="navbar-brand" href="/index.html">Jhia</a>
+            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
-        </button>
-        <div class="collapse navbar-collapse" id="navbarSupportedContent" ">
-            <ul class="navbar-nav ">
-                <li class="nav-item"><a class="nav-link" href="#">Home</a></li>
+            </button>
+            <div class="collapse navbar-collapse" id="navbarSupportedContent" ">
+          <ul class=" navbar-nav ">
+                <li class=" nav-item"><a class="nav-link" href="#">Home</a></li>
                 <li class="nav-item"><a class="nav-link" href="#">About</a></li>
-                <li class="nav-item"><a class="nav-link" href="contact.html">Contact</a></li>
-            </ul>
-        </div>
-    </nav>
+                <li class="nav-item"><a class="nav-link" href="/contact.html">Contact</a></li>
+          </ul>
+            </div>
+       </div>
+  </nav>
     <!-- ---------------------TOP CONTAINER----------------- -->
     <!-- --------------------------------- -->
     <section class="topContainer">
