--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
           <ul class=" navbar-nav ">
                 <li class=" nav-item"><a class="nav-link" href="#">Home</a></li>
                 <li class="nav-item"><a class="nav-link" href="#">About</a></li>
-                <li class="nav-item"><a class="nav-link" href="/contact.html">Contact</a></li>
+                <li class="nav-item"><a class="nav-link" href="contact.html">Contact</a></li>
           </ul>
             </div>
        </div>
