--- a/index.html
+++ b/index.html
@@ -22,22 +22,25 @@
 </head>
 
 <body>
-   <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-      <div class="container-fluid">
-            <a class="navbar-brand" href="/index.html">Jhia</a>
-            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-            <span class="navbar-toggler-icon"></span>
+    <nav class="navbar navbar-expand-lg navbar-light bg-light">
+        <div class="container-fluid">
+            <a class="navbar-brand" href="#">
+                <img src="me.svg" alt="" width="40" height="40">
+            </a>
+            <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
+                data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false"
+                aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
             </button>
             <div class="collapse navbar-collapse" id="navbarSupportedContent" ">
-          <ul class=" navbar-nav ">
+              <ul class=" navbar-nav ms-auto">
                 <li class=" nav-item"><a class="nav-link" href="#">Home</a></li>
                 <li class="nav-item"><a class="nav-link" href="#">About</a></li>
                 <li class="nav-item"><a class="nav-link" href="contact.html">Contact</a></li>
-          </ul>
+                </ul>
             </div>
-       </div>
-  </nav>
-    <!-- ---------------------TOP CONTAINER----------------- -->
+        </div>
+    </nav> <!-- ---------------------TOP CONTAINER----------------- -->
     <!-- --------------------------------- -->
     <section class="topContainer">
         <img src="cloud.svg" alt="" class="topContainerTopCloud">
@@ -53,7 +56,7 @@
             <div class="profile">
                 <img class="profilePicture" src="me.svg" alt="">
                 <h2>Hi.</h2>
-                <p>I'm a web designer / developer based in Bhubaneshwar, Odisha. I have a passion for web design and love to
+                <p>I'm a web designer / developer based in Toronto, Canada. I have a passion for web design and love to
                     create for web and mobile devices.</p>
             </div>
             <hr>
@@ -66,7 +69,7 @@
                         <h2>Design what you want.</h2>
                         <p>I like to keep it simple. My goals are to focus on typography, content and conveying the
                             message that you want to send.</p>
-                        <a href="#"><button>View more</button></a>
+                        <a href="#"><button class="myButton">View more</button></a>
                     </div>
                 </div>
                 <div class="skillRow">
@@ -77,7 +80,7 @@
                         <h2>Develop what you need.</h2>
                         <p>I'm a developer, so I know how to create your website to run across devices using the latest
                             technologies available.</p>
-                        <a href="#"><button>View more</button></a>
+                        <a href="#"><button class="myButton">View more</button></a>
                     </div>
                 </div>
             </div>
