--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
             <div class="profile">
                 <img class="profilePicture" src="me.svg" alt="">
                 <h2>Hi.</h2>
-                <p>I'm a web designer / developer based in Toronto, Canada. I have a passion for web design and love to
+                <p>I'm a web designer / developer based in Bhubaneswar, Odisha. I have a passion for web design and love to
                     create for web and mobile devices.</p>
             </div>
             <hr>
