--- a/contact.html
+++ b/contact.html
@@ -56,7 +56,7 @@
                 <div id="emailHelp" class="formText">* We'll never share your email & phone with anyone else.
                 </div>
                 <div class="buttons">
-                    <a href="mailto:prabhatpatra48@gmail.com?"><button>Submit</button></a>
+                    <a href="mailto:prabhatpatra48@gmail.com?"><button class="myButton">Submit</button></a>
                 </div>
             </form>
 
